# HueMonitor

./: .gitignore  CMakeLists.txt  README.md
include/: HueConnectionAPI.hpp  HueHTTPConnection.hpp  HueLightMonitor.hpp
libs/cpp-httplib-0.7.18/: httplib.h
src/: HueHTTPConnection.cpp  HueLightMonitor.cpp  Main.cpp
